se realizan cambios de opacidades y cambios de

--- a/css/style.css
+++ b/css/style.css
@@ -9418,7 +9418,7 @@ p, span, b {
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #101734ab; }
+    background-color: rgba(0, 0, 0, 0.38); }
   #inmuebles .titulo {
     font-size: 36px;
     font-weight: 500;
