--- a/scss/_zinmuebles.scss
+++ b/scss/_zinmuebles.scss
@@ -14,7 +14,7 @@
         bottom: 0;
         left: 0;
         right: 0;
-        background-color: #101734ab;
+        background-color: rgba(0, 0, 0, 0.38);
     }
     .titulo{
     font-size: 36px;
