--- a/menu/menu.css
+++ b/menu/menu.css
@@ -110,7 +110,7 @@
 }
 .yit-custom-nav-2.left-side-nav .logo {
     position: absolute;
-    left: 15px;
+    left: -23px;
     text-align: center;
     bottom: 20px;
 }
@@ -1017,8 +1017,9 @@ i.fa.fa-search{
     top: 95px;
 }
 .yit-custom-nav-2.left-side-nav .logo {
-    top: 15px;
+    top: 78px;
     bottom: auto;
+    object-fit: contain;
 }
 .yit-custom-nav-3 .toggle-nav .toggle-sitenav li span {
     display: none;
@@ -1125,7 +1126,17 @@ header.webp-creative-header {
 .yit-social ul{
     padding:0;
     margin-top: 70%;
+    }
+@media (max-width:768px){
+
+ .yit-social ul{
+    padding:0;
+    margin-top: -202%;
+    visibility: hidden;
+    }
+   
 }
+
 a.nav-toggle-bar {
     float: left;
     margin-left: 12px;
@@ -1135,6 +1146,33 @@ a.nav-toggle-bar {
 .js-side-nav-open .yit-social{
 	display:none;
 }
+
+@media (max-width:1024px){
+
+    .phone_logo{
+        display:none;
+    }
+    
+}
 .phone_logo{
-	display:none;
+	display:block;
+}
+
+@media (max-width:768px){
+
+    .tamaño {
+        width: 24%;
+        margin-top: 14%;
+        margin-left: -39%
+    }
+    
+}
+@media (max-width:425px){
+
+    .tamaño {
+        width: 47%;
+        margin-top: 0%;
+        margin-left: 0%;
+    }
+    
 }
