--- a/scss/_zinicio.scss
+++ b/scss/_zinicio.scss
@@ -10,7 +10,13 @@ body{
         overflow-x:hidden;
         padding: 0;
         margin: 0;
-        padding-left: 70px;
+        padding-left: 0px;
+        @include media-breakpoint-up(md){
+            padding-left: 0px;
+        }
+        @include media-breakpoint-up(lg){
+            padding-left: 70px;
+        }
         
     }
 
@@ -18,33 +24,73 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "roboto"; 
 }
 p, span, b {
-    font-family: "roboto"; 
+    font-family: "roboto";  
 }
 
 #hero{
     #style_slide_uno{
-        margin-top: -29%;
-        font-size: 339%;
+        margin-top: -24%;
+        font-size: 143%;
         text-shadow: 0px 1px 2px #ffffff;
         @include media-breakpoint-up(md){
-           
-            }
+            font-size: 233%;
+            margin-top: -60%;
+            text-shadow: 0px 1px 2px #ffffff;
+        }
+        @include media-breakpoint-up(lg){
+            margin-top: -29%;
+            font-size: 339%;
+            text-shadow: 0px 1px 2px #ffffff;
+        }
     }
     #style_slide_dos{
-        margin-top: -32%;
-        font-size: 339%;
+        margin-top: -28%;
+        font-size: 147%;
         text-shadow: 0px 1px 2px #ffffff;
+        @include media-breakpoint-up(md){
+            margin-top: -68%;
+            font-size: 272%;
+            text-shadow: 0px 1px 2px #ffffff;
+
+        }
+        @include media-breakpoint-up(lg){
+            margin-top: -32%;
+            font-size: 339%;
+            text-shadow: 0px 1px 2px #ffffff;
+        }
+        
     }
     #style_slide_tres{
-        margin-top: -32%;
-        font-size: 339%;
+        margin-top: 0%;
+        font-size: 135%;
         text-shadow: 0px 1px 2px #ffffff;
+        @include media-breakpoint-up(md){
+            margin-top: -66%;
+            font-size: 263%;
+            text-shadow: 0px 1px 2px #ffffff;
+    
+        }
+        @include media-breakpoint-up(lg){
+            margin-top: -32%;
+            font-size: 339%;
+            text-shadow: 0px 1px 2px #ffffff;
+        }
     }
+   
     #logo{
         object-fit: contain;
         position: absolute;
         margin-top: -260%;
         z-index: 98;
+    }
+}
+.margen_slider{
+    margin-top: 77px;
+    @include media-breakpoint-up(md){
+        margin-top: 77px;
+    }
+    @include media-breakpoint-up(lg){
+        margin-top: 0px;
     }
 }
 .boton_dorado{
@@ -801,6 +847,18 @@ p, span, b {
     height: 50%;
     object-fit: contain;
     padding-top: 0%;
+    @include media-breakpoint-up(md){
+    width: 7%;
+    height: 50%;
+    -o-object-fit: contain;
+    margin-top: -3%;
+    }
+    @include media-breakpoint-up(lg){
+        width: 65%;
+        height: 50%;
+        object-fit: contain;
+        padding-top: 0%;
+    }
 }
 
 
